<resources>
    <string name="app_name">App name</string>
    <string name="main_screen_title">Main Screen</string>
    <string name="compass_level_title">Compass/Level</string>
    <string name="db_title">Database manager</string>
    <string name="audio_player_title">Music</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="phone_hint">Phone</string>
    <string name="directory_button">Select directory</string>
    <string name="directory_not_selected">Directory not selected</string>
    <string name="selected_directory">Selected directory:</string>
    <string name="no_mp3_files">Folder does not contain mp3 files</string>
    <string name="contacts">Contacts:</string>
    <string name="remove">Remove</string>
    <string name="add_contact">Add contact</string>
    <string name="fill_name">Fill name</string>
    <string name="fill_surname">Fill surname</string>
    <string name="fill_phone">Fill phone</string>
    <string name="add_contact_error">Cannot add new contact</string>
    <string name="remove_contact_error">Cannot remove contact</string>
    <string name="load_contacts_error">Cannot load contacts</string>
    <string name="have_sensors">You have the required sensors</string>
    <string name="dont_have_sensors">You don\'t have the required sensors</string>
    <string name="degrees">degrees</string>
    <string name="y_axis">Y axis:</string>
    <string name="z_axis">Z axis:</string>
    <string name="no_track">No track to play</string>
    <string name="dialog_title">Add new contact</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_text">Do you want add new contact?</string>
    <string name="title_activity_translate">Translate</string>
    <string name="text_to_translate">Text to translate</string>
    <string name="translate">Translate</string>
    <string name="translating">Translating</string>
    <string name="translate_failed">Translation failed</string>
    <string name="select_language">Select target language</string>
    <string name="menu">Menu</string>
    <string-array name="target_languages">
        <item>pl</item>
        <item>en</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
