<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Contacts">

    <TextView
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/contacts"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/textview_border"
        android:fillViewport="true"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toBottomOf="@+id/list_title"
        app:layout_constraintWidth_percent="0.9">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="35dp">

            <TableLayout
                android:id="@+id/contact_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="35dp">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="@drawable/table_row_border_bottom"
                    android:paddingLeft="4dp"
                    android:paddingTop="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:gravity="center_horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/name_hint"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:gravity="center_horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/surname_hint"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:gravity="center_horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/phone_hint"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="3"
                        android:gravity="center_horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/remove"
                        android:textColor="@color/colorPrimary" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </HorizontalScrollView>

</FrameLayout>