<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/translate_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/baseline_g_translate_black_18dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/translate_button"
            app:layout_constraintStart_toEndOf="@+id/translate_button"
            app:layout_constraintTop_toTopOf="@+id/translate_button" />

        <Button
            android:id="@+id/translate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_backgrond"
            android:text="@string/translate"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audio_player" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_title"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.067" />

        <Button
            android:id="@+id/compass_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_backgrond"
            android:text="@string/compass_level_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/audio_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_backgrond"
            android:text="@string/audio_player_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/db_manager" />

        <Button
            android:id="@+id/db_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_backgrond"
            android:text="@string/db_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compass_level" />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@mipmap/compass_48"
                android:id="@+id/compass_img" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/compass_level"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="@+id/compass_level"
                app:layout_constraintBottom_toBottomOf="@+id/compass_level" android:tint="@color/colorPrimary"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@mipmap/db_48"
                android:id="@+id/db_img" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/db_manager"
                app:layout_constraintTop_toTopOf="@+id/db_manager" app:layout_constraintStart_toEndOf="@+id/db_manager"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                android:tint="@color/colorPrimary"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/audio_img"
                app:layout_constraintTop_toTopOf="@+id/audio_player"
                app:layout_constraintBottom_toBottomOf="@+id/audio_player" android:layout_marginBottom="8dp"
                app:layout_constraintStart_toEndOf="@+id/audio_player" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:background="@drawable/audio_1_48"
                android:tint="@color/colorAccent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>